--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,7 +40,7 @@
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: italic;
-  font-size: 16px;
+  font-size: 18px;
   display: none;
   top: 90%;
   opacity: 0.6;
